[gd_scene load_steps=4 format=3 uid="uid://c8ecdgjb8vc54"]

[ext_resource type="Script" path="res://Item/Relic/Relic.gd" id="1_co4q0"]
[ext_resource type="Texture2D" uid="uid://w8fuvifmve3p" path="res://Item/Relic/TreasureMap.png" id="2_mgggm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_71j1e"]
size = Vector2(32, 36)

[node name="Relic" type="Node2D"]
script = ExtResource("1_co4q0")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2.84217e-14, 4.76837e-07)
scale = Vector2(0.4375, 0.457785)
texture = ExtResource("2_mgggm")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_71j1e")

[node name="ItemInfo" type="Label" parent="."]
offset_left = -20.0
offset_top = -32.0
offset_right = 20.0
offset_bottom = -15.0

[node name="Interactive" type="Label" parent="."]
visible = false
layout_direction = 1
offset_left = -10.0
offset_top = 12.0
offset_right = 14.0
offset_bottom = 38.0
scale = Vector2(0.8, 0.8)
text = "[E]"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
